[package]
name = "chumsky-proc-macro"
version = "0.1.6"
edition = "2021"
description = "utils for parsing proc macros using chumsky"
license = "MIT OR Apache-2.0"
repository = "https://github.com/alex-s168/chumsky-proc-macro.git"

[features]
default = ["std"]
std = ["chumsky/std", "nostd/std"]

[dependencies]
chumsky = { version = "^0.10.0", features = [], default-features = false }
proc-macro2 = "1.0.95"
nostd = "^0.1.3"

[dev-dependencies]
quote = "1.0.40"

